сделал сборку проекта